# namkha-calculator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
namkha_calculator/: aspects.py  astrology.py  astronomy.py  calendar.py  harmonizer.py  julian.py  phugpa-calendar.py  phugpa_calendar.py  skyfield_calculations.py
src/namkha_calculator/: __init__.py  astrology.py  astronomy.py  calculation_notes.py  calendar.py  harmonizer.py  historical_borders.py  julian.py  methods.py  namkha_calculator.py  phugpa-calendar.py  skyfield_calculations.py
src/namkha_calculator/aspects/: shared_birth.py  shared_mewa.py  year.py
src/namkha_calculator/basemaps/: SOURCE  world_1930.geojson  world_1945.geojson
src/namkha_calculator/core/: __init__.py  aspects.py  astrology.py  astronomy.py  calculation_notes.py  calendar.py  harmonizer.py  methods.py  namkha_calculator.py  skyfield_calculations.py
src/namkha_calculator/core/aspects/: shared_birth.py  shared_mewa.py  year.py
tests/: test_aspects_year.py  test_bundled_resources.py  test_calculation_notes.py  test_calendar.py  test_harmonizer.py  test_historical_borders.py  test_julian.py  test_lat_trimming.py  test_localization_policy.py  test_namkha_year_integration.py  test_phugpa_calendar.py  test_subject_validation.py  test_timezone_handling.py
tests/data/Henning/: pl_1550.txt  pl_1551.txt  pl_1552.txt  pl_1553.txt  pl_1554.txt  pl_1555.txt  pl_1556.txt  pl_1557.txt  pl_1558.txt  pl_1559.txt  pl_1560.txt  pl_1561.txt  pl_1562.txt  pl_1563.txt  pl_1564.txt  pl_1565.txt  pl_1566.txt  pl_1567.txt  pl_1568.txt  pl_1569.txt  pl_1570.txt  pl_1571.txt  pl_1572.txt  pl_1573.txt  pl_1574.txt  pl_1575.txt  pl_1576.txt  pl_1577.txt  pl_1578.txt  pl_1579.txt  pl_1580.txt  pl_1581.txt  pl_1582.txt  pl_1583.txt  pl_1584.txt  pl_1585.txt  pl_1586.txt  pl_1587.txt  pl_1588.txt  pl_1589.txt  (+1211 more)
tools/: build_tzdata.py  fetch_basemaps.py
