[tool.poetry]
name = "namkha-calculator"
version = "0.1.0"
description = ""
authors = ["Namkha Encyclopedia <namkha@simonweiss.space>"]
readme = "README.md"
packages = [{include = "namkha_calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
astropy = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
